# autocad-mcp

./: LICENSE  README.md  build.sh
Plugin/: .gitignore  AutoCADMCP.csproj  AutoCADMCPBridge.cs  Command.cs  Log.cs  MCPCommandAttribute.cs  README.md  buildPlugin.sh  copyPlugin.sh
Plugin/Commands/: CommandTemplates.cs  CurveCreationCommands.cs  CurveEditingCommands.cs  EditingCommands.cs  EntityCommands.cs  Shape3dCommands.cs  ShapeCommands.cs  SolidCreationCommands.cs  SolidEditingCommands.cs  TextCommands.cs  ViewCommands.cs  WorkspaceCommands.cs
Server/: .gitignore  __init__.py  autocad_connection.py  config.py  pyproject.toml  server.py
Server/tools/: __init__.py  curve_creation_tools.py  curve_editing_tools.py  editing_tools.py  entity_tools.py  shape3d_tools.py  shape_tools.py  solid_creation_tools.py  solid_editing_tools.py  text_tools.py  view_tools.py  workspace_tools.py
