[project]
name = "autocad-mcp"
version = "0.1.0"
description = "AutoCAD MCP Server: A AutoCAD Plugin for AutoCAD integration via the Model Context Protocol (MCP)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27.2", "mcp[cli]>=1.4.1"]

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["config", "server", "autocad_connection"]
packages = ["tools"]
